tests/golden/type_errors/match_expression_arm_type.cd
enum Result { Ok(number), Empty }
let result = Result.Ok(1);
let label = match result {
  Result.Ok(value) => value,
  Result.Empty => "empty",
};
