tests/golden/type_errors/match_expression_arm_type.err
Type error at 5:16: match arm result expects number, got string
    Result.Empty => "empty",
                 ^
